[Scanner Service] Update swagger add explorer APIs
